--- a/Styles/components/_header.scss
+++ b/Styles/components/_header.scss
@@ -32,6 +32,7 @@ header i {
 
 nav > ul {
   display: flex;
+  align-items: center;
 }
 
 nav > ul a {
@@ -51,6 +52,8 @@ header .header-profile > .avatar-img {
 .header-profile {
   display: flex;
   align-items: center;
+  flex-direction: row-reverse;
+  
 }
 
 nav > ul {
