--- a/Styles/mystyle.scss
+++ b/Styles/mystyle.scss
@@ -1,15 +1,26 @@
-@use "./Styles/global";
+
 //header
-@use "./Styles/components/header";
+@use './components/header';
 
 
-@use "./Styles/sections/section-about-me";
-@use "./Styles/sections/section-home";
-@use "./Styles/sections/section-contact";
-@use "./Styles/sections/section-projects";
+
+
+
+
+
 
 //footer
-@use "./Styles/components/footer";
+@use './components/footer';
 
 //responsive style
-@use "./Styles/mobile";
+@use './mobile';
+@use './global';
+
+@use './sections/section-about-me';
+@use './sections/section-home';
+@use './sections/section-contact';
+@use './sections/section-projects';
+
+
+
+
